src/stylesheets/_styles.scss
/*
 * Misc styling.
 *
 * This includes all styles that fit nowhere else.
 */

a {
    text-decoration: none;
}

body {
    margin: 0;
    color: black;
    background-color: white;
}

button, .button {
    margin: 6px 8px!important;
    padding: 0 8px!important;
}

md-dialog-actions, .app-snackbar-actions {
    padding: 12px 0;
    display: flex;
    flex-direction: row-reverse;
    flex-wrap: wrap;
}

md-dialog-container {
    margin: auto;
}

md-icon {
    vertical-align: middle;
}

md-input-container {
    width: 100%;
}

md-sidenav-container > * {
    display: flex!important;
    flex-direction: column;
    height: 100vh!important;
}

md-sidenav-container > * > *:last-child {
    overflow: auto;
}

md-spinner {
    margin: auto;
}

md-grid-tile {
    @include shade($primary-palette, $primary-medium-shade);
    cursor: pointer;
    a { color: $primary-fg; }
}

md-grid-tile:hover {
    @include shade($primary-palette, $primary-light-shade);
    a { color: $primary-light-fg; }
}

md-toolbar {
    @include shade($primary-palette, $primary-medium-shade);
    button, .button { color: white!important; }
}

nav, .app-toolbar-title, .app-content > div, h1 > small > span, md-card {
    @extend .pad;
}

snack-bar-container {
    color: white;
}

.app-action {
    @extend .pad;
    display: inline-block;
    position: absolute;
    bottom: 0;
    right: 0;
}

.app-content {
    margin: auto;
    margin-top: 0;
    width: 100%;
    max-width: 1600px;
}

.app-icon-button {
  box-shadow: none;
  user-select: none;
  background: none;
  border: none;
  cursor: pointer;
  filter: none;
  font-weight: normal;
  height: auto;
  line-height: inherit;
  margin: 0;
  min-width: 0;
  padding: 0;
  text-align: left;
  text-decoration: none;
}

.app-toolbar-filler {
    flex: 1 1 auto;
}

.clear, page div {
    clear: both;
}

.dark md-sidenav .mat-card {
    background: #535353;
}

.displacer-content .positioning-anchor * {
    pointer-events: all;
}

.flex {
    display: flex;
}

.flex-2-cols {
    width: 100% * 2 / 12;
}

.flex-3-cols {
    width: 100% * 3 / 12;
}

.flex-4-cols {
    width: 100% * 4 / 12;
}

.flex-5-cols {
    width: 100% * 5 / 12;
}

.flex-6-cols {
    width: 100% * 6 / 12;
}

.flex-7-cols {
    width: 100% * 7 / 12;
}

.flex-8-cols {
    width: 100% * 8 / 12;
}

.flex-9-cols {
    width: 100% * 9 / 12;
}

.flex-10-cols {
    width: 100% * 10 / 12;
}

.hidden {
    display: none;
}

.invisible {
    opacity: 0;
}

.mat-sidenav-content {
    overflow: hidden;
}

.pad {
    margin: 24px;
}

.text-accent {
    color: $accent-bg;
}

.text-primary {
    color: $primary-bg;
}

.text-warn {
    color: $warn-bg;
}

.wrap {
    flex-wrap: wrap;
}

#aside {
    width: 600px;
}

#displacer-target {
    position: fixed;
    width: 100%;
    height: 100%;
    pointer-events: none;
    z-index: 2;
}

#nav {
    width: 480px;
}

#preload_content {
    width: 35em;
    margin: 0 auto;
}

/*
 * All mobile devices.
 */
@media (max-width: 1263px) {
    .close-btn {
        display: none;
    }

    .grid {
        margin: 0;
    }
}

/*
 * All handsets.
 */
@media (max-width: 959px) and (max-height: 599px), (max-width: 599px) {
    .pad {
        margin: 16px;
    }
}

/*
 * Handsets and small tablets in portrait mode, small to medium handsets in 
 * landscape.
 */
@media (max-width: 719px) {
    #preload_content {
        width: 95%;
    }
}

/*
 * Everything except the smallest devices in landscape mode and portrait mode 
 * handsets.
 */
@media (min-width: 600px) {
    #aside .back-btn {
        display: none;
    }
}

/*
 * Handsets in portrait mode, small handsets in landscape mode.
 */
@media (max-width: 599px) {
    #aside {
        width: 100%;
    }
}

/*
 * Everything excapt smaller portrait mode devices.
 */
@media (min-width: 480px) {
    h1 > small {
        float: right;
    }

    .mobile-only, h1 br {
        display: none;
    }
}

/*
 * Small and medium handsets in portrait mode.
 */
@media (max-width: 479px) {
    #nav {
        width: 80%;
    }
}

